--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -8,6 +8,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2.3.1
-      - uses: sparta-science/check-version-matches-tag@master
+      - uses: 2CodersStudio/ActionPlistVersion@main
         with:
           plist-path: test/Info.plist
+          key: CFBundleShortVersionString
