--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -10,5 +10,9 @@ jobs:
       - uses: actions/checkout@v2.3.1
       - uses: 2CodersStudio/ActionPlistVersion@main
         with:
-          plist-path: test/Info.plist
+          plist-path: test/Info-CFBundleShortVersionString.plist
           key: CFBundleShortVersionString
+      - uses: 2CodersStudio/ActionPlistVersion@main
+        with:
+          plist-path: test/Info-XCFrameworkFormatVersion.plist
+          key: XCFrameworkFormatVersion
