--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -21,14 +21,11 @@ jobs:
           key: XCFrameworkFormatVersion
       - name: evaluate results CFResult
         if: ${{ steps.CFResult.outputs.version != "1.0.3" }}
-        uses: actions/github-script@v4
-          with:
-            script: core.setFailed('CFResult NOK')
+        run: core.setFailed('CFResult NOK')
       - name: evaluate results XCResult
         if: ${{ steps.XCResult.outputs.version != "1.0" }}
-          uses: actions/github-script@v4
-            with:
-              script: core.setFailed('CFResult NOK')
+        run:  core.setFailed('CFResult NOK')
+
 
 
       # - run: |
