--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -20,26 +20,18 @@ jobs:
           plist-path: test/Info-XCFrameworkFormatVersion.plist
           key: XCFrameworkFormatVersion
       - name: evaluate results CFResult
-        if: ${{ steps.CFResult.outputs.version != "1.0.3" }}
-        run: core.setFailed('CFResult NOK')
-      - name: evaluate results XCResult
-        if: ${{ steps.XCResult.outputs.version != "1.0" }}
-        run:  core.setFailed('CFResult NOK')
-
-
-
-      # - run: |
-      #   if [[  ]];
-      #     then echo "CFResult OK"
-      #   else
-      #     then echo "CFResult NOK"
-      #     exit 1
-      #   fi
-      #   if [[ steps.XCResult.outputs.version == "CFBundleShortVersionString" ]];
-      #     then echo "XCResult OK"
-      #   else
-      #     then echo "XCResult NOK"
-      #     exit 1
-      #   fi
+      - run: |
+        if [[ ${{ steps.XCResult.outputs.version }} == "CFBundleShortVersionString" ]];
+          then echo "CFResult OK"
+        else
+          then echo "CFResult NOK"
+          exit 1
+        fi
+        if [[ ${{ steps.XCResult.outputs.version }} == "XCFrameworkFormatVersion" ]];
+          then echo "XCResult OK"
+        else
+          then echo "XCResult NOK"
+          exit 1
+        fi
         
 
