--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -21,13 +21,13 @@ jobs:
           key: XCFrameworkFormatVersion
       - name: evaluate results CFResult
       - run: |
-        if [[ ${{ steps.XCResult.outputs.version }} == "CFBundleShortVersionString" ]];
+        if [[ "${{ steps.CFResult.outputs.version }}" == "CFBundleShortVersionString" ]];
           then echo "CFResult OK"
         else
           echo "CFResult NOK"
           exit 1
         fi
-        if [[ ${{ steps.XCResult.outputs.version }} == "XCFrameworkFormatVersion" ]];
+        if [[ "${{ steps.XCResult.outputs.version }}" == "XCFrameworkFormatVersion" ]];
           then echo "XCResult OK"
         else
           echo "XCResult NOK"
