--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -20,20 +20,20 @@ jobs:
           plist-path: test/Info-XCFrameworkFormatVersion.plist
           key: XCFrameworkFormatVersion
       - name: evaluate results CFResult
-        shell: bash
         run: |
-        if [[ ${{ steps.CFResult.outputs.version }} == "CFBundleShortVersionString" ]];
-          then "echo "CFResult OK"
-        else
-          echo "CFResult NOK"
-          exit 1
-        fi
-        if [[ ${{ steps.XCResult.outputs.version }} == "XCFrameworkFormatVersion" ]];
-          then "echo "XCResult OK"
-        else
-          echo "XCResult NOK"
-          exit 1
-        fi
+          if [[ ${{ steps.CFResult.outputs.version }} == "CFBundleShortVersionString" ]];
+            then echo "CFResult OK"
+          else
+            echo "CFResult NOK"
+            exit 1
+          fi
+          if [[ ${{ steps.XCResult.outputs.version }} == "XCFrameworkFormatVersion" ]];
+            then echo "XCResult OK"
+          else
+            echo "XCResult NOK"
+            exit 1
+          fi
+        shell: bash
 
         
         
