--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -22,14 +22,14 @@ jobs:
       - name: evaluate results CFResult
       - id: Test
         run: |
-          if [[ ${{ steps.CFResult.outputs.version }} == "CFBundleShortVersionString" ]];
-            then echo "CFResult OK"
+          if [[ ${{ steps.CFResult.outputs.version }} == "CFBundleShortVersionString" ]];then
+            echo "CFResult OK"
           else
             echo "CFResult NOK"
             exit 1
           fi
-          if [[ ${{ steps.XCResult.outputs.version }} == "XCFrameworkFormatVersion" ]];
-            then echo "XCResult OK"
+          if [[ ${{ steps.XCResult.outputs.version }} == "XCFrameworkFormatVersion" ]];then
+            echo "XCResult OK"
           else
             echo "XCResult NOK"
             exit 1
