--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -20,21 +20,10 @@ jobs:
           plist-path: test/Info-XCFrameworkFormatVersion.plist
           key: XCFrameworkFormatVersion
       - name: evaluate results CFResult
-      - id: Test
-        run: |
-          if [[ ${{ steps.CFResult.outputs.version }} == "CFBundleShortVersionString" ]];then
-            echo "CFResult OK"
-          else
-            echo "CFResult NOK"
-            exit 1
-          fi
-          if [[ ${{ steps.XCResult.outputs.version }} == "XCFrameworkFormatVersion" ]];then
-            echo "XCResult OK"
-          else
-            echo "XCResult NOK"
-            exit 1
-          fi
-
-        
-        
-
+      - id: Test CFResult
+        if: ${{ steps.CFResult.outputs.version != "CFBundleShortVersionString" }}
+        run: echo "CFResult NOK"; exit 1
+      - name: evaluate results CFResult
+      - id: Test XCResult 
+        if: ${{ steps.XCResult.outputs.version != "XCFrameworkFormatVersion" }}
+        run: echo "XCResult NOK"; exit 1
