--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -20,10 +20,8 @@ jobs:
           plist-path: test/Info-XCFrameworkFormatVersion.plist
           key: XCFrameworkFormatVersion
       - name: evaluate results CFResult
-      - id: Test CFResult
         if: ${{ steps.CFResult.outputs.version != "CFBundleShortVersionString" }}
         run: echo "CFResult NOK"; exit 1
-      - name: evaluate results CFResult
-      - id: Test XCResult 
+      - name: evaluate results XCResult
         if: ${{ steps.XCResult.outputs.version != "XCFrameworkFormatVersion" }}
         run: echo "XCResult NOK"; exit 1
