--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -19,9 +19,9 @@ jobs:
         with:
           plist-path: test/Info-XCFrameworkFormatVersion.plist
           key: XCFrameworkFormatVersion
-      - name: evaluate results CFResult
-        if: ${{ steps.CFResult.outputs.version != "CFBundleShortVersionString" }}
-        run: echo "CFResult NOK"; exit 1
-      - name: evaluate results XCResult
-        if: ${{ steps.XCResult.outputs.version != "XCFrameworkFormatVersion" }}
-        run: echo "XCResult NOK"; exit 1
+      # - name: evaluate results CFResult
+      #   if: ${{ steps.CFResult.outputs.version != "CFBundleShortVersionString" }}
+      #   run: echo "CFResult NOK"; exit 1
+      # - name: evaluate results XCResult
+      #   if: ${{ steps.XCResult.outputs.version != "XCFrameworkFormatVersion" }}
+      #   run: echo "XCResult NOK"; exit 1
