--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -20,8 +20,21 @@ jobs:
           plist-path: test/Info-XCFrameworkFormatVersion.plist
           key: XCFrameworkFormatVersion
       - name: evaluate results CFResult
-        if: ${{ steps.CFResult.outputs.version != "CFBundleShortVersionString" }}
-        run: echo "CFResult NOK"; exit 1
+        run: |
+              if [[ ${{ steps.CFResult.outputs.version != "CFBundleShortVersionString" }} ]];
+                then echo "CFResult NOK"; exit 1
+              fi
       - name: evaluate results XCResult
-        if: ${{ steps.XCResult.outputs.version != "XCFrameworkFormatVersion" }}
-        run: echo "XCResult NOK"; exit 1
+        run: |
+              if [[ ${{ steps.XCResult.outputs.version != "XCFrameworkFormatVersion" }} ]];
+                then echo "XCResult NOK"; exit 1
+              fi
+
+
+
+      # - name: evaluate results CFResult
+      #   if: ${{ steps.CFResult.outputs.version != "CFBundleShortVersionString" }}
+      #   run: echo "CFResult NOK"; exit 1
+      # - name: evaluate results XCResult
+      #   if: ${{ steps.XCResult.outputs.version != "XCFrameworkFormatVersion" }}
+      #   run: echo "XCResult NOK"; exit 1
