--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -1,7 +1,9 @@
 name: test-action
 
-on: push
-  branches: main
+on: 
+  push:
+    branches: 
+      - main
 
 jobs:
   test:
@@ -20,18 +22,20 @@ jobs:
         with:
           plist-path: test/Info-XCFrameworkFormatVersion.plist
           key: XCFrameworkFormatVersion
-          
+
       - name: evaluate results CFResult
         run: |
               if [[ ${{ steps.CFResult.outputs.version != "CFBundleShortVersionString" }} ]];
                 then echo "CFResult NOK"; exit 1
               fi
+        shell: bash
 
       - name: evaluate results XCResult
         run: |
               if [[ ${{ steps.XCResult.outputs.version != "XCFrameworkFormatVersion" }} ]];
                 then echo "XCResult NOK"; exit 1
               fi
+        shell: bash
 
 
 
