--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -23,14 +23,12 @@ jobs:
           plist-path: test/Info-XCFrameworkFormatVersion.plist
           key: XCFrameworkFormatVersion
       - name: evaluate results CFResult
-        run: |
+      - run: |
           if [[ ${{ steps.CFResult.outputs.version != "CFBundleShortVersionString" }} ]];
             then echo "CFResult NOK"; exit 1
           fi
-        shell: bash
       - name: evaluate results XCResult
-        run: |
+      - run: |
           if [[ ${{ steps.XCResult.outputs.version != "XCFrameworkFormatVersion" }} ]];
             then echo "XCResult NOK"; exit 1
           fi
-        shell: bash
