--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -16,7 +16,7 @@ jobs:
           plist-path: test/Info-CFBundleShortVersionString.plist
           key: CFBundleShortVersionString
       - name: Test CFResult
-      - run: echo "ok"
+        run: echo "ok"
       - name: Test XCFrameworkFormatVersion
         id: XCResult
         uses: 2CodersStudio/ActionPlistVersion@main
@@ -24,5 +24,5 @@ jobs:
             plist-path: test/Info-XCFrameworkFormatVersion.plist
             key: XCFrameworkFormatVersion
       - name: Test XCResult
-      - run: echo "ok"
+        run: echo "ok"
 
