--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -9,15 +9,15 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2.3.1
-      - name: Test CFBundleShortVersionString
-      - id: CFResult
+        name: Test CFBundleShortVersionString
       - uses: 2CodersStudio/ActionPlistVersion@main
+        id: CFResult
         with:
           plist-path: test/Info-CFBundleShortVersionString.plist
           key: CFBundleShortVersionString
-      - name: Test XCFrameworkFormatVersion
+      - uses: 2CodersStudio/ActionPlistVersion@main
+        name: Test XCFrameworkFormatVersion
         id: XCResult
-        uses: 2CodersStudio/ActionPlistVersion@main
         with:
             plist-path: test/Info-XCFrameworkFormatVersion.plist
             key: XCFrameworkFormatVersion
