--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -21,15 +21,11 @@ jobs:
         with:
             plist-path: test/Info-XCFrameworkFormatVersion.plist
             key: XCFrameworkFormatVersion
-      - name: Test XCResult
-        run: |
+      - run: |
            if [[ ${{ steps.XCResult.outputs.version != "1.0" }} ]];
              then echo "XCResult NOK"
            fi
-      - name: Test CFResult
-        run: |
+      - run: |
            if [[ ${{ steps.CFResult.outputs.version != "1.0.3" }} ]];
              then echo "CFResult NOK"
            fi
-
-
