--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -21,11 +21,11 @@ jobs:
         with:
             plist-path: test/Info-XCFrameworkFormatVersion.plist
             key: XCFrameworkFormatVersion
-      - run: |
+      - run:
            if [[ ${{ steps.XCResult.outputs.version != "1.0" }} ]];
              then echo "XCResult NOK"
            fi
-      - run: |
+      - run:
            if [[ ${{ steps.CFResult.outputs.version != "1.0.3" }} ]];
              then echo "CFResult NOK"
            fi
