--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -22,10 +22,14 @@ jobs:
             plist-path: test/Info-XCFrameworkFormatVersion.plist
             key: XCFrameworkFormatVersion
       - run:
-           if [[ "${{ steps.XCResult.outputs.version }}"" != "1.0" ]];
-             then echo "XCResult NOK"; exit 1
+          if [[ "${{ steps.XCResult.outputs.version }}" != "1.0" ]];
+            then echo "XCResult NOK"; exit 1
+           else 
+            then echo "XCResult OK";
            fi
       - run:
-           if [[ ${{ steps.CFResult.outputs.version }} != "1.0.3" ]];
-             then echo "CFResult NOK"; exit 1
-           fi
+          if [[ "${{ steps.CFResult.outputs.version }}"" != "1.0.3" ]];
+            then echo "CFResult NOK"; exit 1
+          else 
+            then echo "CFResult OK";
+          fi
