--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,10 @@ name: 'Retrieve the bundle version of the project'
 description: 'To build release based on tag and verify version has been set in Info.plist'
 inputs:
   plist-path:
-    description: 'path to Info.plist file containing XCFrameworkFormatVersion or CFBundleShortVersionString'
+    description: 'path to Info.plist file containing CFBundleShortVersionString'
     required: true
   key:
-    description: 'path to Info.plist file containing XCFrameworkFormatVersion or CFBundleShortVersionString'
+    description: 'path to Info.plist file containing CFBundleShortVersionString'
     required: true
 outputs:
   version: 
